# HadesCoopMod

./: .gitattributes  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
game/: CMakeLists.txt
game/scripts/: ControllerSelectionMenuScreen.sjson  CoopCamera.lua  CoopControl.lua  CoopMenu.lua  CoopPlayers.lua  GameHooks.lua  GameModifed.lua  GamemodeInit.lua  HeroContext.lua  HeroContextProxy.lua  HeroContextProxyStore.lua  HeroEx.lua  HookUtils.lua  Localization.sjson  RunEx.lua  SecondPlayerUI.lua  TableUtils.lua  config.lua  init.lua  meta.sjson  meta.xml  types.lua
game/scripts/hooks/: ControlHooks.lua  DamageHooks.lua  EnemyAiHooks.lua  FreezeHooks.lua  LootHooks.lua  MenuHooks.lua  PactDoorFix.lua  RunHooks.lua  SaveHooks.lua  UIHooks.lua  UseHooks.lua
game/scripts/loot/: LootInterface.lua  LootQuery.lua  LootRoomDuplicated.lua  LootShared.lua
game/src/: CoopContext.cpp  CoopContext.h  HookSystem.cpp  HookSystem.h  HookTable.cpp  HookTable.h  main.cpp
game/src/extensions/: LuaFunctionDefs.cpp  PlayerManagerExtension.cpp  PlayerManagerExtension.h
game/src/interface/: Entity.h  GameDataManager.h  Gamepad.h  InputHandler.h  Interact.h  MapThing.h  MapThingDef.h  Player.h  PlayerManager.h  PlayerUnit.h  Thing.h  Unit.h  UnitData.h  UnitDataDef.h  UnitManager.h  World.h
